Issue number:  18949 Obtained from: Submitted by: Reviewed by:   csjank minor grammar fixes

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1788,10 +1788,10 @@ UQT24=The instructions given above are based on the lucene documentation at http
 ManagingIssuesOverview=Overview
 CreatingTemplates=Creating templates
 IssueEntryTemplate=Issue entry templates
-UITP1=You may find you often enter the same values for attributes for similar issues. Templates allow you to save a set of values for quick access and use while creating issues. Templates store descriptive dataset that can be used to populate values in future issues. Templates use the same attributes as are available for entering an issue.
+UITP1=You may find that you often enter the same values for attributes for similar issues. Templates allow you to save a set of values for quick access and use while creating issues. Templates store descriptive dataset that can be used to populate values in future issues. Templates use the same attributes as are available for entering an issue.
 UITP2=For instance, a user, jdoe, is responsible for creating and implementing test plans for all functionality on the UNIX operating system. Since jdoe will be entering the same values for each issue relating to test plans, jdoe can define a template with those common values. When creating issues, jdoe can use the template to populate the common data points. Fields populated using a template can be edited in the Enter New form.
 UITP3=Templates can be available on a global or individual basis. Personal templates can be made by any user and are available only to the creator. Global templates require permission to create. Users without the create permission can suggest new templates to the domain administrator. The administrator is responsible for reviewing all suggested templates and approving those that have global use.
-UITP4S1=To access your templates from the left navigation bar click on the 
+UITP4S1=To access your templates from the navigation bar click on the 
 TemplateList=Template list
 UITP4S2=link under your issue type. On the 
 UITP4S3=screen you will find a list of any templates currently available. You can either manage the templates there or create a new template.
