--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1567,11 +1567,11 @@ AssociatingUsersP2=All user association tasks are performed on the
 AssociatingUsersP2S1=screen. To access this screen either use the 
 AssociatingUsersP2S2=button on the view issue page or search for a group of issues and use the 
 AssociatingUsersP2S3=button. On the Assign screen you will see a list of users currently associated with the issue, their email address and the type of association and a User section which allows you to add users to the issue. You can filter the list of users using the filter form. The filter form is case-senstitive. You can search for users by full name or email address.
-AssociatingUsersP3Head=associating a user:
+AssociatingUsersP3Head=Associating a user:
 AssociatingUsersP3=Once you have narrowed the list of users to select from you can select an association type for the drop down box next to the users name. Use the check box to add multiple users at the same time. Once you have selected your users and set their association type use the 
-AssociatingUsersP4Head=removing an associated user:
+AssociatingUsersP4Head=Removing an associated user:
 AssociatingUsersP4=select the user or users you would like to remove from the issue and click the 
-AssociatingUsersP5Head=altering the association type:
+AssociatingUsersP5Head=Altering the association type:
 AssociatingUsersP5=If you need to change the type of association use the association drop down box next to the name of the user. Each association available for that user will be listed in that box. Select the desired association and click the 
 AssociatingUsersP6=User attributes can also be used in a search criteria.  If you do not see a specific user on the user list contact your administrator and make sure that they have been added to the user attribute.
 MovingIssuesP1=You may need to track a similar issue in multiple areas. Rather than entering the same issue twice, in different areas, you can copy or move an issue 
@@ -1697,7 +1697,7 @@ CrossModuleQueriesHavePersonalScope=Cross module queries always have personal sc
 
 ## UserQueryCustom
 UQCP1=Custom queries allow you to search the database based on a refined set of parameters. You can search on any of the text attributes as well as any other attribute your project owner has included as a quick search parameter.
-UQCP2S1=For this section, select the attributes you would like to search against. The n enter a search string. Each attribute will be searched for every term that appears in your search string. For instance, the Game project has the
+UQCP2S1=For this section, select the attributes you would like to search against then enter a search string. Each attribute will be searched for every term that appears in your search string. For instance, the Game project has the
 SummaryDescr=Summary, Description, Story-line
 and=and
 ErrorMessage=Error message
@@ -1708,8 +1708,11 @@ UQCP4=You can use this form to determine how you would like the search results d
 SearchingKnowledge=Searching the knowledge base
 SearchingPerson=Searching by personnel
 SearchingChange=Searching by state change
-UQAP1=The advanced query form provides an interface for you to unambiguously define your search criteria. You can use this form to enter values for some, all or none of the attributes available in your issue type. You can further qualify your search criteria by requesting issues within a particular number range or date range. Say you want to know all closed issues relating to the AIX operating system within the last week. You can enter a date range (use the MM/DD/YYYY format, for instance, 01/01/2002) and define specific values for the operating system and status attributes. Clicking the 
-UQAP1S2=button will run the query.
+UQAP1=The advanced query form provides an interface for you to unambiguously define your search criteria. You can use this form to enter values for some, all or none of the attributes available in your issue type. You can further qualify your search criteria by requesting issues within a particular number range or date range. Say you want to know all closed issues relating to the AIX operating system within the last week. You can enter a date range (use the MM/DD/YYYY format, for instance, 01/01/2002) and define specific values for the operating system and status attributes. 
+UQAP1S2=You can access the advanced query form by choosing the
+NewModuleQuery=New module query
+UQAP1S3=option from the Select query list on the query bar. Clicking the 
+UQAP1S4=button will run the query.
 UQAP2=You can define values for some, none or all of the attributes. Scarab will search the knowledge base for issues that contain all of the values you have specified. The advanced query form allows you to define fine grained search criteria. There are three types of search criteria available on the advanced query form:
 SearchKnowledgeBase=Search the knowledge base
 
@@ -1717,8 +1720,8 @@ StateChange= State Change
 UQAP3=You can use each of these sections individually or a combination to qualify your searches. If you run a query without defining any attributes all issues associated with the logged in user ID will be returned. 
 UQAP4=section provides a space for you to define values for issue attributes. Each attribute that is available to your issue type is represented here. You can define values for all, some or none of the issue attributes. You can also limit your search to a range of issues or creation dates. 
 UQAP5=Once the issue is submitted, the database will be searched for issues containing the values for all of the attributes defined in your search criteria. To effectively find the issues you are most interested in you want to define only the attributes that will meet your criteria. If you define attributes outside of your requirements you will be less likely to find any issues that meet your criteria. For instance, jdoe is looking for issues involving database errors affecting one of the UNIX operating systems. Rather than defining a value for the operating system, jdoe can create a search that will search for text strings about the database errors. If jdoe needs to refine the search criteria further, other attributes can be defined. When defining your search criteria, you should start with the smallest set of characteristics relevant to your needs.
-UQAP6=The personnel search section allows you to search for issues based on users associated. Depending on what user attributes have been defined, you can search by the commitor and/or the assignee. All users that are associated with issues in the issue can be selected from a user attribute in this section. You can select as many users as you need.
-UQAP7=This field allows you to set an attribute you would like to monitor and the original value and expected new value. For instance, you may want to know all issues that have changed from a low severity to a high severity. Additionally, you can monitor these changes within a date range. For example, you may be interested in knowing which issues have changed severity within the last week. Clicking the "Update options" button saves your changes to the query. You can also set your results view preferences at this time. When the view preference is based on Issue state or status, the sort order is not necessarily alphabetical. It mirrors the order for the attribute which is determined by an administrator. You can alter the search order and the number of issues that appear per page. You can submit your query at this time or choose the save it. 
+UQAP6=section allows you to search for issues based on users associated. Depending on what user attributes have been defined, you can search by the commitor and/or the assignee. All users that are associated with issues in the issue can be selected from a user attribute in this section. You can select as many users as you need.
+UQAP7=This field allows you to set an attribute you would like to monitor and the original value and expected new value. For instance, you may want to know all issues that have changed from a low severity to a high severity. Additionally, you can monitor these changes within a date range. For example, you may be interested in knowing which issues have changed severity within the last week. Clicking the "Update options" button saves your changes to the query. You can also set your results view preferences at this time. When the view preference is based on Issue state or status, the sort order is not necessarily alphabetical. It mirrors the order for the attribute which is determined by an administrator. You can alter the search order and the number of issues that appear per page. You can submit your query at this time or choose to save it. 
 
 ## UserQuery
 QueryBar=The query bar
