Fixed typos in the following keys WhatIssueTypeAnswer2 CanIMoveIssues StopDuplicateChecking GlobalAndUserAttributesAnswer
Issue number: 18988
Obtained from:
Submitted by:
Reviewed by:   tberry

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1439,21 +1439,21 @@ BestP3=Scarab can assist in tracking and assessing the health of a project. If y
 FrequentlyAskedQuestions=Frequently asked questions
 WhatIssueType=How do I figure out what issue type to use?
 WhatIssueTypeAnswer=The issue types available to you in your project have been determined by your project administrator. By accessing the 
-WhatIssueTypeAnswer2=Issue Type selection
+WhatIssueTypeAnswer2=Issue Type
 WhatIssueTypeAnswer3=screen you can see a description of each issue type and select the one that best describes your issue. For more information see the 
 WhatIssueTypeAnswer4=discussion.
-CanIMoveIssues=Can I move an issue to a different issue type? how about to a different project? 
+CanIMoveIssues=Can I move an issue to a different issue type? How about to a different project? 
 CanIMoveIssuesAnswer=Issues can be moved between issue types through the issue detail page. For more information see the
 CanIMoveIssuesAnswer2=moving issues
 CanIMoveIssuesAnswer3=discussion. For a discussion on circumstances in which you may wish to move issues, see the 
 CanIMoveIssuesAnswer4=document.
-StopDuplicateChecking=How can stop the duplication checking?
+StopDuplicateChecking=How can I stop the duplication checking?
 StopDuplicateCheckingAnswer=The duplication checking process is set by the project leader. If you feel it is affecting the processing of issues, contact your project administrator.
 CanIAddAttributes=How do I add or remove attributes from my screen?
 CanIAddAttributesAnswer=Many pages in Scarab are customizable. For more information see the discussion on 
 CustomizingTheScreen=customizing the screen.
 GlobalAndUserAttributes=What is the difference between a Global attribute and a User attribute?
-GlobalAndUserAttributesAnswer=Global attributes are used to define issues. Global attributes are defined at the domain level and made available within issue types by the Project Owner. When creating issues, the values assigned to global attributes become the descriptors for issues. Values associated with global attributes and used to search the database for issues when using queries. You may find Global attributes like "Status", "Description", "Operating System" and the like in your Issue Type.
+GlobalAndUserAttributesAnswer=Global attributes are used to define issues. Global attributes are defined at the domain level and made available within issue types by the Project Owner. When creating issues, the values assigned to global attributes become the descriptors for issues. Values associated with global attributes are used to search the database for issues when using queries. You may find Global attributes like "Status", "Description", "Operating System" and the like in your Issue Type.
 GlobalAndUserAttributesAnswer2=Once issues are created, User attributes are used to associate users with issues. User attributes are defined at the global level and are associated with a base permission and an email action. Users with the right permission appear in the User attributes drop down menu and can be associted with an issue using that User attribute. The Assigned To attribute is a User attribute.
 GlobalAndUserAttributesAnswer3=For more information on Global attributes see 
 GlobalAndUserAttributesAnswer4=For more information on User attributes see 
