--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1663,8 +1663,8 @@ SavingQueries=Saving queries
 ManagingQueries=Managing saved queries
 SubscribingQueries=Subscribing to saved queries
 UQSP1=Once you have a well defined set of search parameters you may want to save them for future use. Saved queries can be used to generate reminders, keep you informed of progress on issues or to quickly access a specific issue configuration. You may have access to globally available saved queries or create your own.
-UQSP2S1=To create a saved query access the page and 
-UQSP2S2=define your search parameters (for more information see Advanced). Click the 
+UQSP2S1=To create a saved query access the 
+UQSP2S2=page and define your search parameters (for more information see Advanced). Click the 
 SaveThisQuery=Save this query 
 UQSP2S3=button. Stored queries are accessible through the 
 UQSP2S4=link on the left navigation bar or in the drop down box on the query bar. The saved query drop box only appears if you have stored queries.
@@ -1678,7 +1678,7 @@ StoredQuery=Stored query
 UQSP6S1= page is used to manage the saved queries. All queries that are available for this issue type appear in this table. Click on the name of the query to access the query edit screen. The location link will execute the query. Clicking on the name in the 
 Initiatedby=Initiated by
 UQSP6S2=field will provide an email form, using your browsers default email interface. You can also set a default query and subscribe (see below for more information).
-UQSP7=Using the buttons you can affect multiple queries simultaneously. Use the check boxes to select the queries you would like affect.
+UQSP7=You can use the buttons to affect multiple queries simultaneously. Use the checkboxes to select the queries you would like to affect.
 Copy=Copy
 UQSP8=button will create a copy of the query. You can click the name of the copy to edit. Using this feature can help you to create fine grained saved queries. 
 UQSP9=button will remove the saved query from your list. You can delete any of your personal saved queries.
