[feature] Save Message As implemented

--- a/res/org/columba/mail/i18n/dialog/general.properties
+++ b/res/org/columba/mail/i18n/dialog/general.properties
@@ -36,3 +36,9 @@ main_font=Main font:
 choose=Choose...
 
 text_font=Text font:
+
+
+# Strings related to Save Message As action
+
+save_html_message=Save html message as (message no.
+save_text_message=Save text message as (message no.
