--- a/res/org/columba/mail/i18n/dialog/saveas.properties
+++ b/res/org/columba/mail/i18n/dialog/saveas.properties
@@ -1,5 +1,6 @@
-# Strings related to Save Message As command
+# Strings related to Save Message As commands
 
+save_msg_source = Save message source as
 save_html_message = Save text/html as
 save_text_message = Save text/plain as
 save_all_headers = Include ALL headers
