--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -36,6 +36,8 @@ menu_file_sendunsentmessages_tooltip = Send all unsent Messages now
 menu_file_fetchall = Check All Accounts
 menu_file_manage = Manage Messages remotely
 menu_file_printsetup = Printer Setup...
+menu_file_save = Save As...
+menu_file_save_tooltip = Save selected message source as...
 
 menu_edit_accountconfig = Mail Account Settings...
 menu_edit_preferences = Theme and Font Preferences
@@ -141,8 +143,8 @@ menu_message_new_toolbar = New Message
 menu_message_new_tooltip = Create a new message
 menu_message_print = Print
 menu_message_print_tooltip = Print selected message
-menu_message_save = Save Message as...
-menu_message_save_tooltip = Save selected message as..
+menu_message_save = Save Message Body As...
+menu_message_save_tooltip = Save selected message as...
 menu_message_reply = Reply
 menu_message_reply_tooltip = Reply to selected Message
 menu_message_bounce = Bounce
