--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -860,6 +860,7 @@ ConfirmDelete=Confirm delete
 AttrMappedToModules=This attribute is associated with one or more modules. If you delete it, and then undelete it later, you will have to add it back to those modules.
 AttrMappedToIssueTypes=This attribute is associated with one or more issue types. If you delete it, and then undelete it later, you will have to add it back to those issue types.
 NoUserAttributeSelected=No user attribute was selected for removal.
+NoAttributeSelected=No attribute was selected for removal.
 
 ## XMLExport
 XMLExportSettingsScreen=This screen allows you to export all of the global settings and currently selected module settings (optionally including the user data) into an XML file. This file can either be saved to disk (with the given name) or exported into your browser window and saved.
