[feature] moved AccountWizard to new wizard framework

--- a/res/org/columba/mail/i18n/dialog/accountwizard.properties
+++ b/res/org/columba/mail/i18n/dialog/accountwizard.properties
@@ -1,36 +1,46 @@
 # accountwizard
 create_a_new_account=Create a new account...
 welcome=Welcome
-initial_welcome_screen=Initial Welcome Screen
-specify_your_identity_information=Specify your identity information
-incoming_server_properties=Incoming Server Properties
-outgoing_server_properties=Outgoing Server Properties
-advanced_options=Advanced Options
-account_wizard=Account Wizard
-finished_information_gathering=Finished information gathering
+welcome_description=Welcome to Columba
+identity_description=Specify your identity information
+incomingserver=Incoming Server Properties
+outgoingserver=Outgoing Server Properties
+title=Account Wizard
+finish=Finished information gathering
 
 # advanced panel
 enter_account_name=Enter the name by which you like to refer to this account.
-example__bill__s_private_mail=Example: Bill\'s Private Mail
-if_you_want_to,_you_can_directly_edit_your_advanced_account_preferences_now=If you want to, you can directly edit your advanced account preferences now.
-advanced_preferences=Advanced Preferences ...
-advanced_preferences_mnemonic=a
-you_are_now_ready_to_work_with_columba=You are now ready to work with Columba.\n\nIf you have any suggestions, feature requests, problems, found bugs or want to send a patch -\njust open the About Dialog for contacting us\n\nHave Fun,\nThe Columba Developers
+example=Example:\ 
+finish_text=You are now ready to work with Columba.\n\nIf you have any suggestions, feature requests, problems, found bugs or want to send a patch -\njust open the About Dialog for contacting us\n\nHave Fun,\nThe Columba Developers
 
 # identity panel
-if_you_send_a_message=If you send a message, your name and address are visible in the From-Field of the message.\nPlease enter your name as you want it to appear.
-example__bill_gates=Example: Bill Gates
-example__billgates_address=Example: BillGates@microsoft.com
+identity_text=If you send a message, your name and address are visible in the From-Field of the message.\nPlease enter your name as you want it to appear.
 
 # incoming server panel
-please_specify_your_incoming_mail_server_properties=Please specify your incoming mail server properties. If you are unsure please\nask your system administrator or internet service provider for help.
-example__billgates=Example: billgates
-example__mail.microsoft.com=Example: mail.microsoft.com
-host_pop3_server=Host (POP3 Server):
-host_pop3_server_mnemonic=h
-host_imapserver=Host (IMAP Server):
-host_imapserver_mnemonic=h
-please_specify_your_outgoing_mail_server_properties=Please specify your outgoing mail server properties. If you are unsure please\nask your system administrator or internet service provider for help.
-host_smtp_server=Host (SMTP Server):
-host_smtp_server_mnemonic=h
-welcome_to_columba=Welcome to Columba\!\n\nIt is the first time you are starting Columba. This Wizard will guide you in creating a new account.
+incomingserver_text=Please specify your incoming mail server properties. If you are unsure please\nask your system administrator or internet service provider for help.
+host=Host:
+host_mnemonic=h
+outgoingserver_text=Please specify your outgoing mail server properties. If you are unsure please\nask your system administrator or internet service provider for help.
+welcome_text=Welcome to Columba\!\n\nIt is the first time you are starting Columba. This Wizard will guide you in creating a new account.
+
+identity=Identity Information
+
+name=Name:
+
+name_mnemonic=n
+
+address=Address:
+
+address_mnemonic=a
+
+incomingserver_description=Please enter your Incoming Mail Server
+
+login=Login:
+
+login_mnemonic=l
+
+type=Type:
+
+type_mnemonic=t
+
+outgoingserver_description=Please enter your Outgoing Mail Server
