[intern] added missing step description, removed bug in jwizz

--- a/res/org/columba/mail/i18n/dialog/accountwizard.properties
+++ b/res/org/columba/mail/i18n/dialog/accountwizard.properties
@@ -44,3 +44,5 @@ type=Type:
 type_mnemonic=t
 
 outgoingserver_description=Please enter your Outgoing Mail Server
+
+finish_description=All necessary information has been entered
