Issue number: 17899 - Confusing behavior with a fatal error, when attempting to add users to groups.  As it is not yet possible to do so this patch prevents the user from trying.
Modified files:
* src/i18n/ScarabBundle_en_US.properties -
  GroupsAreForOptionsOnly: new alert message
* src/java/org/tigris/scarab/actions/ConfigureReport.java -
  doGotoeditgroups: since it is possible in the screen to try to switch
  levels and click the 'Add/edit groups' button, give the user a message
  letting them know that they can't do so in order to try to add users
  to groups.

Reviewed by: elicia

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -631,6 +631,7 @@ UsersByUserAttribute=Users (by user attribute)
 DatesOrDatesRanges=Date(s)
 ConfineIssueRangeForReport=Confine range of issues for this report
 AddUsersToList=Add selected users to list
+GroupsAreForOptionsOnly=Only option attributes implement grouping.  You should press 'Edit selected heading' button after selecting a different heading.
 ChangeGroupName=Change group name(s)
 InvalidGroupName=Invalid group name
 DuplicateGroupName=Duplicate group name
@@ -1211,7 +1212,6 @@ MovedIssueEmailSubject=Issue {0} moved from issue {1} in module {2}
 CannotMoveToSameModule=You cannot move an issue to the same module/issue type.
 SelectModuleAndIssueType=Please select a module and issue type.
 OnlySelectOneDestination=Please select only one destination.
-IssueAttributeValueActive={0} will be activated.
 ReasonRequired=A reason is required to perform a move or copy.
 
 # Approval
