*** empty log message ***

--- a/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
@@ -101,7 +101,7 @@
 136 = Cannot refer to an instance method while explicitly invoking a constructor
 137 = Recursive constructor invocation {0}({1})
 138 = Cannot refer to ''this'' nor ''super'' while explicitly invoking a constructor
-
+139 = Constructor call must be the first statement in a constructor
 140 = Implicit super constructor {0}({1}) is undefined for default constructor. Must define an explicit constructor
 141 = Implicit super constructor {0}({1}) is not visible for default constructor. Must define an explicit constructor
 142 = Implicit super constructor {0}({1}) is ambiguous for default constructor. Must define an explicit constructor
