--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -12,7 +12,7 @@
 
 ### compiler 
 compiler.name = Eclipse Java Compiler
-compiler.version = 0.359
+compiler.version = 0.357b
 compiler.copyright = Copyright IBM Corp 2000, 2003. All rights reserved.
 
 ### scanning
