Quoted strings didn't handle \ddd escapes.
Also, the constructors for TXT, HINFO, and NAPTR records can now throw
IllegalArgumentException if given invalid strings.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+6/18/2003
+	- Quoted strings didn't handle \ddd escapes.
+
 6/17/2003
 	- Fix an ArrayIndexOutofBoundsException triggered by load balancing
 	  in the ExtendedResolver.
