* src/i18n/ScarabBundle_en_US.properties   PaginatePrevious, PaginateNext: Use capitalization consistent with   the rest of the application.  Added non-breaking space between   arrows.  Moved right arrow to after the "Next", rather than before   it.

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -183,8 +183,8 @@ Refresh=Refresh
 Done=Done
 Save=Save
 
-PaginatePrevious=&laquo; previous
-PaginateNext=&raquo; next
+PaginatePrevious=&laquo;&nbsp;Previous
+PaginateNext=Next&nbsp;&raquo;
 Next=Next
 ClearForm=Clear form
 CopySelected=Copy selected
