[intern] moved ImportWizard to new wizard framework

--- a/res/org/columba/mail/i18n/dialog/mailboximport.properties
+++ b/res/org/columba/mail/i18n/dialog/mailboximport.properties
@@ -8,3 +8,24 @@ MBOX_name = default mbox format
 Evolution_name = Ximian Evolution
 Mozilla_name = Mozilla Mail
 PegasusMail_name = Pegasus Mail
+title=Import Wizard
+
+location=Select Locations
+
+location_description=Please choose source and target locations
+
+files=Files
+
+location_text=Please choose the source files and destination folder.
+
+source=Source Files:
+
+destination=Destination Folder:
+
+explanation=(Destination folder inside Columba)
+
+plugin=Select Importer
+
+plugin_description=Please select the importer for your mailbox
+
+plugin_text=Please choose the mailbox format you want to import to Columba.
