[intern] minor changes

--- a/res/org/columba/mail/i18n/dialog/mailboximport.properties
+++ b/res/org/columba/mail/i18n/dialog/mailboximport.properties
@@ -22,7 +22,7 @@ source=Source Files:
 
 destination=Destination Folder:
 
-explanation=(Destination folder inside Columba)
+explanation=(Folder inside Columba)
 
 plugin=Select Importer
 
