[feature] i18n for Import Mailbox menu item

--- a/res/org/columba/mail/i18n/menu/mainframe.properties
+++ b/res/org/columba/mail/i18n/menu/mainframe.properties
@@ -240,3 +240,5 @@ attachmentview_mimeheader_tooltip=View the Mime-Header of this Attachment
 menu_edit_extern_edit = Use External Editor
 
 menu_security=Security
+
+menu_utilities_importmailbox=Import Mailbox...
