[intern] added mnemonics

--- a/res/org/columba/mail/i18n/dialog/mailboximport.properties
+++ b/res/org/columba/mail/i18n/dialog/mailboximport.properties
@@ -29,3 +29,7 @@ plugin=Select Importer
 plugin_description=Please select the importer for your mailbox
 
 plugin_text=Please choose the mailbox format you want to import to Columba.
+
+destination_mnemonic=d
+
+source_mnemonic=s
