[feature] added account name field

--- a/res/org/columba/mail/i18n/dialog/accountwizard.properties
+++ b/res/org/columba/mail/i18n/dialog/accountwizard.properties
@@ -41,3 +41,7 @@ type_mnemonic=t
 outgoingserver_description=Please enter your Outgoing Mail Server
 
 finish_description=All necessary information has been entered
+
+accountname=Account Name:
+
+accountname_mnemonic=o
