--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+6/22/2003
+	- DNS types and classes are now represented as ints, not shorts.
+	  This is an API change, but allows the full type/class range
+	  to be used.
+
 6/18/2003
 	- Quoted strings didn't handle \ddd escapes.
 
