* ScarabBundle_en_US.properties: fix IssueTypeNotFound resource. * AttributeGroupEdit.java: doSaveglobal(): if issue type is null, do not continue actio n. * GlobalAttributeEdit.vm: pass issue type id on when deleting an attribute. * ScarabRequestTool.java: getIssueType(). if issue type id key is not valid, return nul l issue type rather than print stack trace. Issue number: 19569 Reviewed by:   dlr

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -769,7 +769,7 @@ Deny=Deny
 Query=Query
 RoleX=Role X
 EnterIssueTemplate=Enter issue template
-IssueTypeNotFound=Issue type not found. To proceed, please click 
+IssueTypeNotFound=Issue type not found. 
 Here=here.
 IssueTypeInfo=Issue type information
 IssueViewDisplayOptions=Issue view display options
