--- a/res/org/columba/addressbook/i18n/dialog/addressbookimport.properties
+++ b/res/org/columba/addressbook/i18n/dialog/addressbookimport.properties
@@ -7,3 +7,26 @@ oldcolumbaaddressbook_name = old-style Columba Addressbook
 vcardaddressbook_name = vcard Addressbook
 mozillacsvaddressbook_name = Mozilla *.csv file
 netscapeldifaddressbook_name = Netscape v4.x *.ldif file
+title=Import Wizard
+
+destination=Destination Folder:
+
+destination_mnemonic=d
+
+explanation=(Folder inside Columba)
+
+location_description=Please choose source and target locations
+
+location=Select Locations
+
+source=Source File:
+
+source_mnemonic=s
+
+plugin_text=Please choose the addressbook format you want to import to Columba.
+
+plugin_description=Please select the importer for your addressbook
+
+plugin=Select Importer
+
+location_text=Please choose the source files and destination folder.
