* src/i18n/ScarabBundle_en_US.properties
NoIssuesSelected : The message is changed into more appropriate to the context.

Issue: PCN19693
Submitted by: irk@collab.net
Reviewed by:Kevin Maples

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -506,7 +506,7 @@ SaveTemplate=Save template
 EditTemplate=Edit template
 
 ## entry/Wizard*
-NoIssuesSelected=No issues have been selected.
+NoIssuesSelected=You have not selected any artifacts to add comments to.
 AddInitialComment=Add initial comment
 
 ## Macros
