*** empty log message ***

--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -119,6 +119,7 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \      noEffectAssign     + assignment without effect\n\
 \      charConcat         + char[] in String concat\n\
 \      pkgDefaultMethod   + attempt to override package-default method\n\
+\      semicolon            superfluous semicolon\n\
 \      unusedArgument       unread method argument\n\
 \      unusedImport       + unused import declaration\n\
 \      unusedLocal          unread local variable\n\
