Issue number: 19519 - Heading displayed as "Error on Attribute Id=111: kannaki " in report result
Modified files:
* src/i18n/ScarabBundle_en_US.properties - added resources
  IncompleteReportDefinition, ReportDefinitionModified,
  ErrorOccurredCheckingMessage to be used when a report definition has
  been rendered invalid.
* src/java/org/tigris/scarab/actions/ConfigureReport.java -
  added doVerifyReport and similar logic to doGeneratereport to avoid
  including invalid data when editing or running a report.
* src/java/org/tigris/scarab/reports/ReportBridge.java -
  added removeStaleDefinitions() and supporting methods: removeStaleOptions
  and removeStaleUserAttributes to clean up a report which may conflict
  with the current state of the application.
* src/java/org/tigris/scarab/screens/ReportExport.java -
  doBuildTemplate:  added some defensive code to avoid errors in the
  event the method is invoked with an invalid report definition, however,
  the current application flow does not require it.
* src/templates/reports/SelectUsers.vm -
  a cosmetic change to not show the selected users table headers, if there
  are no users selected.
* src/templates/screens/reports/ReportList.vm -
  invoke the appropriate action events, to clean up any invalid parts
  of the report before editing or running the report.
* src/templates/screens/reports/Report_1.vm - Check that it is still okay
  to create the report and give a message if not.

Reviewed by: venkat

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -722,6 +722,9 @@ GroupingItemsAppearAsSingleHeading=<em><strong>Note:</strong> Grouping items app
 ColumnHeadings=Y-axis content: Column headings
 EachHeadingAppers=<strong>Note:</strong> Each heading in this list appears as a column or row heading in this report's output. Each item in each heading appears as a new row or column (depending on whether the Y-axis has been set to be either row or column).
 GroupingItemsAppear=Grouping items appear as a single heading bearing the selected group name
+IncompleteReportDefinition=The report does not appear ready.  Please check its definition; it is possible the data to be shown in the report has been made invalid by an administrator.
+ReportDefinitionModified=This report used data that has been removed by an administrator.  The report definition is modified accordingly.
+ErrorOccurredCheckingMessage=There appeared to be a message related to this report, but an error occured when retrieving it.
 
 ## Dependencies
 depend_blocking=blocks
