[intern]split theme-switcher and font settings stuff (code cleanups). user is now able to overwrite theme font settings, default is false meaning that Columba respects Look and Feel font settings

--- a/res/org/columba/mail/i18n/dialog/general.properties
+++ b/res/org/columba/mail/i18n/dialog/general.properties
@@ -33,6 +33,8 @@ ask_on_empty_subject=Ask when sending message with empty subject
 
 main_font=Main font:
 
+overwrite_main_font=Overwrite Look and Feel font settings
+
 choose=Choose...
 
 text_font=Text font:
