Collision info should correctly display the user who performed the last activity.
Change log:
File:  src/templates/macros/GlobalMacros.vm
#macro (printCollisionInfo) - Use last activityset's creator instead of the
issue's, while displaying collision info.
-Internationalized the string "Issue last modified by".

File:src/java/org/tigris/scarab/actions/base/BaseModifyIssue.java
#isCollision() - put the ActivitySet instead of the list of Activity objects in the context variable "lastActivities".

File:src/i18n/ScarabBundle_en_US.properties
Added property-IssueLastModifiedBy=Issue {0} last modified by

File:adapter-scarab/scarab/src/i18n/i18n_overrides/OverridesScarabBundle_en.properties
Added property-IssueLastModifiedBy=Artifact {0} last modified by

Issue: PCN19717
Reviewed by: Daniel Rall
Committed by: Venkat <venkat@collab.net>

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1154,6 +1154,8 @@ CannotDeleteDependency=Cannot delete a parent issue dependency from a child issu
 AttributeHasBeenUndefined={0} has been undefined.
 AttributeSetToNewValue={0} set to ''{1}''
 AttributeChangedFromToNewValue={0} changed from ''{1}'' to ''{2}''
+IssueLastModifiedBy=Issue {0} last modified by
+
 
 ## ReportIssue
 IssueNoLongerValid=The issue is no longer valid.
