Dont allow duplicate check element to be placed at the first position, and do allow it to be positioned last.
* src/templates/screens/admin/GlobalArtifactTypeEdit.vm
* src/templates/screens/admin/ArtifactTypeEdit.vm
  When peforming an operation such that a "Duplicate check" element is
  created (like adding a new attribute group), "Duplicate check"
  should not be allowed to be positioned before the first attribute
  group either in the UI, nor when saving sequence numbers (meaning
  that dupCheck.sequenceNbr <= 1 is never a valid state).  The
  sequence drop-down for "Duplicate check" could even omit entries for
  the first and last sequences.
  Added condition to allow duplicate check to be positioned at the
  last position.

* src/java/org/tigris/scarab/actions/admin/GlobalArtifactTypeCreate.java
  #doSavegroups(): Mark even empty attributes groups which are
  sequenced before the duplicate check as dedupe groups (attributes
  may be added later on).  Also did minor optimizations and used more
  descriptive variable names.  Removed the code that assures that the
  duplicate check is not at the end.

* src/java/org/tigris/scarab/actions/admin/ArtifactTypeEdit.java
  Removed the code that assures that the duplicate check is not at the
  end.

* src/java/org/tigris/scarab/om/AttributeGroup.java
  #delete(): "attrGroups = module.getAttributeGroups(getIssueType(),
  false);" properly positioned.

* src/java/org/tigris/scarab/om/AbstractScarabModule.java
  #getDedupeSequence(): Set the default sequence value to
  groups.size() + 1. This would allow positioning duplicate check at
  the end.

* src/java/org/tigris/scarab/om/IssueType.java
  #getDedupeSequence(): Set the default sequence value to
  groups.size()+1.  This would allow positioning duplicate check at
  the end.

* src/i18n/ScarabBundle_en_US.properties
  CannotPositionDuplicateCheckFirst: New resource to replace
  DuplicateCheckCannotBeginOrEnd, which was now mis-named.

Issue: PCN18801
Submitted by: Venkat/

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1046,7 +1046,7 @@ IssueTypeAddedToModule=The issue type has been added to the module.
 IssueTypeNameExists=Issue type by that name already exists
 # this is also used in ArtifactTypeEdit
 DuplicateSequenceNumbersForAttributeGroups=Please do not enter duplicate sequence numbers for attribute groups.
-DuplicateCheckCannotBeginOrEnd=The duplicate check cannot be at the beginning or the end.
+CannotPositionDuplicateCheckFirst=The duplicate check cannot be at the beginning.
 
 ## GlobalArtifactTypes 
 ChangesResultDuplicateNames=Changes would result in duplicate names
