*** empty log message ***

--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -112,6 +112,7 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \      constructorName    + method with constructor name\n\
 \      deprecation        + deprecation outside deprecated code\n\
 \      fieldHiding          field hiding another variable\n\
+\      indirectStatic     + indirect reference to static member\n\
 \      intfNonInherited   + interface non-inherited method compatibility\n\
 \      localHiding          local variable hiding another variable\n\
 \      maskedCatchBlock   + hidden catch block\n\
