--- a/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
@@ -20,6 +20,7 @@
 15 = Incompatible operand types {0} and {1}
 16 = Incompatible conditional operand types {0} and {1}
 17 = Type mismatch: cannot convert from {0} to {1}
+18 = The static member type {0}.{1} should be accessed directly
 
 20 = No enclosing instance of type {0} is accessible to invoke the super constructor. Must define a constructor and explicitly qualify its super constructor invocation with an instance of {0} (e.g. x.super() where x is an instance of {0}).
 21 = No enclosing instance of type {0} is accessible. Must qualify the allocation with an enclosing instance of type {0} (e.g. x.new A() where x is an instance of {0}).
@@ -60,6 +61,7 @@
 75 = Cannot reference a field before it is defined
 76 = The static field {0}.{1} should be accessed in a static way
 77 = The private field {0}.{1} is never read locally
+78 = The static field {0}.{1} should be accessed directly
 
 80 = The final field {0}.{1} cannot be assigned. It must be blank in this context, not qualified and not in compound assignment
 81 = The blank final field {0} may not have been initialized
@@ -91,6 +93,7 @@
 116 = Cannot invoke {1}({2}) on the array type {0}
 117 = The static method {1}({2}) from the type {0} should be accessed in a static way
 118 = The private method {1}({2}) from the type {0} is never used locally
+119 = The static method {1}({2}) from the type {0} should be accessed directly 
 
 130 = The constructor {0}({1}) is undefined
 131 = The constructor {0}({1}) is not visible
