*** empty log message ***

--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -108,18 +108,19 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \      none                 disable all warnings\n\
 \      allDeprecation       deprecation including inside deprecated code\n\
 \      assertIdentifier     ''assert'' used as identifier\n\
+\      charConcat         + char[] in String concat\n\
 \      conditionAssign      possible accidental boolean assignment\n\
 \      constructorName    + method with constructor name\n\
 \      deprecation        + deprecation outside deprecated code\n\
 \      fieldHiding          field hiding another variable\n\
-\      indirectStatic     + indirect reference to static member\n\
+\      indirectStatic       indirect reference to static member\n\
 \      intfNonInherited   + interface non-inherited method compatibility\n\
 \      localHiding          local variable hiding another variable\n\
 \      maskedCatchBlock   + hidden catch block\n\
 \      nls                  string literal lacking non-nls tag //$NON-NLS-<n>$\n\
 \      noEffectAssign     + assignment without effect\n\
-\      charConcat         + char[] in String concat\n\
 \      pkgDefaultMethod   + attempt to override package-default method\n\
+\      predicateThrow       predicate method throwing exceptions\n\
 \      semicolon            superfluous semicolon\n\
 \      unusedArgument       unread method argument\n\
 \      unusedImport       + unused import declaration\n\
