--- a/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
@@ -94,6 +94,7 @@
 117 = The static method {1}({2}) from the type {0} should be accessed in a static way
 118 = The private method {1}({2}) from the type {0} is never used locally
 119 = The static method {1}({2}) from the type {0} should be accessed directly 
+120 = The predicate method {1}({2}) from the type {0} should not declare thrown exceptions
 
 130 = The constructor {0}({1}) is undefined
 131 = The constructor {0}({1}) is not visible
