*** empty log message ***

--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -122,6 +122,7 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \      pkgDefaultMethod   + attempt to override package-default method\n\
 \      predicateThrow       predicate method throwing exceptions\n\
 \      semicolon            superfluous semicolon\n\
+\      uselessTypeCheck     unnecessary cast/instanceof operation\n\
 \      unusedArgument       unread method argument\n\
 \      unusedImport       + unused import declaration\n\
 \      unusedLocal          unread local variable\n\
