--- a/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
@@ -115,6 +115,8 @@
 146 = Default constructor cannot handle exception type {0} thrown by implicit super constructor. Must define an explicit constructor
 147 = Unhandled exception type {0} thrown by implicit super constructor
 
+148 = Unnecessary cast from type {0} to type {1}
+149 = Unnecessary instanceof check, the expression of type {0} is already compatible with type {1}
 150 = The type of the expression must be an array type but it resolved to {0}
 151 = Must explicitly convert the char[] to a String
 152 = String constant is exceeding the limit of 65535 bytes of UTF8 encoding
