--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -108,6 +108,7 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \      none                 disable all warnings\n\
 \      allDeprecation       deprecation including inside deprecated code\n\
 \      assertIdentifier     ''assert'' used as identifier\n\
+\      booleanThrow         boolean method throwing exceptions\n\
 \      charConcat         + char[] in String concat\n\
 \      conditionAssign      possible accidental boolean assignment\n\
 \      constructorName    + method with constructor name\n\
@@ -120,13 +121,12 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \      nls                  string literal lacking non-nls tag //$NON-NLS-<n>$\n\
 \      noEffectAssign     + assignment without effect\n\
 \      pkgDefaultMethod   + attempt to override package-default method\n\
-\      predicateThrow       predicate method throwing exceptions\n\
 \      semicolon            superfluous semicolon\n\
-\      uselessTypeCheck     unnecessary cast/instanceof operation\n\
 \      unusedArgument       unread method argument\n\
 \      unusedImport       + unused import declaration\n\
 \      unusedLocal          unread local variable\n\
 \      unusedPrivate        unused private member declaration\n\
+\      unusedTypeCheck      unnecessary cast/instanceof operation\n\
 \      specialParamHiding   constructor or setter parameter hiding another field\n\
 \      staticReceiver     + non-static reference to static member\n\
 \      syntheticAccess      synthetic access for innerclass\n\
