*** empty log message ***

--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -126,7 +126,7 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \      unusedImport       + unused import declaration\n\
 \      unusedLocal          unread local variable\n\
 \      unusedPrivate        unused private member declaration\n\
-\      unusedTypeCheck      unnecessary cast/instanceof operation\n\
+\      uselessTypeCheck     unnecessary cast/instanceof operation\n\
 \      specialParamHiding   constructor or setter parameter hiding another field\n\
 \      staticReceiver     + non-static reference to static member\n\
 \      syntheticAccess      synthetic access for innerclass\n\
