--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -148,9 +148,7 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \    -time              display speed information \n\
 \    -noExit            do not call System.exit(n) at end of compilation (n==0 if no error)\n\
 \    -repeat <n>        repeat compilation process <n> times for perf analysis\n\
-\    @file              to shorten or simplify the javac command, you may specify one or more\n\
-\                       files that themselves contain compiler arguments. This enables you to\n\
-\                       overcome the command-line length limitation of Windows.\
+\    @<file>            read command line arguments from separate file\n\
 \ \n\
 \    -? -help           print this help message\n\
 \    -v -version        print compiler version\n\
