*** empty log message ***

--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -148,7 +148,7 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \    -time              display speed information \n\
 \    -noExit            do not call System.exit(n) at end of compilation (n==0 if no error)\n\
 \    -repeat <n>        repeat compilation process <n> times for perf analysis\n\
-\    @<file>            read command line arguments from separate file\n\
+\    @<file>            read command line arguments from file\n\
 \ \n\
 \    -? -help           print this help message\n\
 \    -v -version        print compiler version\n\
