*** empty log message ***

--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -82,7 +82,7 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \ \n\
 \Usage: <options> <source files | directories>\n\
 \ If directories are specified, then their source contents are compiled.\n\
-\ Possible options are listed below. Those enabled by default are prefixed with ''+''\n\
+\ Possible options are listed below. Options enabled by default are prefixed with ''+''\n\
 \ \n\
 \ Classpath options:\n\
 \    -cp -classpath <directories and zip/jar files separated by ;>\n\
