--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -97,8 +97,8 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \ Compliance options:\n\
 \    -1.3             + use 1.3 compliance level\n\
 \    -1.4               use 1.4 compliance level\n\
-\    -source <version>  set source level (1.3 or 1.4, default matches compliance level)\n\
-\    -target <version>  set classfile target (1.1 to 1.4, default matches compliance level)\n\
+\    -source <version>  set source level (1.3 or 1.4, default based on compliance level)\n\
+\    -target <version>  set classfile target (1.1 to 1.4, default based on compliance level)\n\
 \ \n\
 \ Error/Warning options:\n\
 \    -deprecation     + deprecation outside deprecated code\n\
