*** empty log message ***

--- a/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
@@ -184,7 +184,7 @@
 236 = Syntax error on token(s), misplaced construct(s)
 237 = Syntax error on tokens, {0} expected instead
 238 = Syntax error on tokens, no accurate correction available
-239 = Syntax error, unexpected end of file
+239 = Syntax error, unexpected {0}
 240 = Syntax error, insert "{0}" to complete {1}
 241 = Syntax error, insert "{0}" to complete scope
 242 = Syntax error, insert "{0}" to complete phrase
