--- a/compiler/org/eclipse/jdt/internal/compiler/util/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/util/messages.properties
@@ -47,6 +47,10 @@ parser.syntaxRecovery = SYNTAX RECOVERY
 parser.regularParse = REGULAR PARSE
 parser.missingFile = missing file {0}
 parser.corruptedFile = corrupted file {0}
+parser.endOfFile = end of file
+parser.endOfConstructor = end of constructor
+parser.endOfMethod = end of method
+parser.endOfInitializer = end of initializer
 
 ### binding
 binding.subclass = anonymous subclass of {0}
