--- a/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
@@ -123,7 +123,7 @@
 153 = case expressions must be constant expressions
 154 = The literal {1} of type {0} is out of range 
 156 = Cannot cast from {0} to {1}
-157 = The type {0} cannot be instantiated
+157 = Cannot instantiate the type {0}, since it is not a concrete class
 158 = Cannot define dimension expressions when an array initializer is provided
 159 = Variable must provide either dimension expressions or an array initializer
 160 = The operator {0} is undefined for the argument type(s) {1}
